k8s/auth-api-deployment.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "auth-api"
  namespace: "default"
  labels:
    app: "auth-api"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: "auth-api"
  template:
    metadata:
      labels:
        app: "auth-api"
    spec:
      containers:
        - name: "auth-api"
          image: "gcr.io/pay-mta/auth-api:latest"
