k8s/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
  namespace: default
  labels:
    app: auth-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: auth-api
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      containers:
        - name: auth-api
          image: gcr.io/pay-mta/auth-api:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-api
  namespace: default
  labels:
    app: payments-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: payments-api
  template:
    metadata:
      labels:
        app: payments-api
    spec:
      containers:
        - name: payments-api
          image: gcr.io/pay-mta/payments-api:latest
