k8s/payments-api-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-api
  namespace: default
  labels:
    app: payments-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: payments-api
  template:
    metadata:
      labels:
        app: payments-api
    spec:
      containers:
        - name: payments-api
          image: gcr.io/pay-mta/payments-api:latest
---
---
apiVersion: v1
kind: Service
metadata:
  name: payments-api-loadbalancer
spec:
  selector:
    app: payments-api
  ports:
    - port: 9090
      targetPort: 90
  type: LoadBalancer
