k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pta-mta-api
spec:
  selector:
    run: pay-mta-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
