k8s/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: auth-api-service
  namespace: default
  labels:
    app: auth-api
    app.kubernetes.io/managed-by: gcp-cloud-build-deploy
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: auth-api
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: payments-api-service
  namespace: default
  labels:
    app: payments-api
    app.kubernetes.io/managed-by: gcp-cloud-build-deploy
spec:
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
  selector:
    app: payments-api
  type: LoadBalancer
